tests/NormalTests/paczka1/fuzzy1/69752529.err
Error in line 16: 2NEDDax A296 27,1
Error in line 27: gtF9g A751 82,8
Error in line 17: 2NEDDax A751 13,9
Error in line 24: 4B1LcKNODQ4 A296 236,6
